test/cli/test-exceptions/exceptions-4/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: system-namespaces-exception
  namespace: kube-system
spec:
  exceptions:
  - policyName: require-labels
    ruleNames:
    - check-required-labels
  match:
    any:
    - resources:
        kinds:
        - Pod
        namespaces:
        - kube-system
---
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: monitoring-exception
  namespace: monitoring
spec:
  exceptions:
  - policyName: require-labels
    ruleNames:
    - check-required-labels
  match:
    any:
    - resources:
        kinds:
        - Pod
        namespaces:
        - monitoring
        names:
        - monitoring-*
