test/cli/test-exceptions/exceptions-4/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resources.yaml
exceptions:
- exception.yaml
results:
- kind: Pod
  policy: require-labels
  resources:
  - good-pod
  result: pass
  rule: check-required-labels
- kind: Pod
  policy: require-labels
  resources:
  - bad-pod
  result: fail
  rule: check-required-labels
- kind: Pod
  policy: require-labels
  resources:
  - legacy-app
  result: skip
  rule: check-required-labels
- kind: Pod
  policy: require-labels
  resources:
  - monitoring-agent
  result: skip
  rule: check-required-labels
